--- a/content/data/config.json
+++ b/content/data/config.json
@@ -42,7 +42,7 @@
         "has_anncmnt": false
     },
     "footer": {
-        "logo": "images/logo.svg",
+        "logo": "images/venn.svg",
         "logo_alt": "YourGoal logo",
         "has_primary_nav": true,
         "primary_nav_title": "Company",
