config.json: updated logo in footer

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -42,7 +42,7 @@
         "has_anncmnt": false
     },
     "footer": {
-        "logo": "images/venn.svg",
+        "logo": "images/Screen_Shot_2021-01-06_at_1.53.19_AM-removebg.png",
         "logo_alt": "YourGoal logo",
         "has_primary_nav": true,
         "primary_nav_title": "Company",
