--- a/content/data/config.json
+++ b/content/data/config.json
@@ -14,7 +14,7 @@
         "has_secondary_nav": true,
         "secondary_nav_links": [
             {
-                "label": "About",
+                "label": "Features",
                 "url": "/about",
                 "style": "link"
             },
