config.json: updated label in secondary_nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -19,7 +19,7 @@
                 "style": "link"
             },
             {
-                "label": "FAQ",
+                "label": "Integrations",
                 "url": "/faq",
                 "style": "link"
             },
